# RAG-Based-Researcher

./: README.md  app.py  config.yaml  pyproject.toml
main_graph/: graph_builder.py
retriever/: retriever.py
subgraph/: graph_builder.py
utils/: prompt.py
