[project]
name = "multiagenticrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.13",
    "docling>=2.39.0",
    "fastapi[all]>=0.115.14",
    "langchain>=0.3.26",
    "langchain-cohere>=0.4.4",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.67",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "rank-bm25>=0.2.2",
    "rank-llm==0.12.8",
    "uvicorn>=0.35.0",
]
